# all-colors

./: Cargo.toml  README.md
benches/: benchmark_colors.rs
src/: colors.rs  lib.rs
