[package]
name = "all-colors"
version = "0.0.6"
edition = "2021"
license = "MIT"
description = "Utility crate for getting color hex values."
readme = "README.md"
documentation = "https://docs.rs/all-colors"
repository = "https://github.com/miketwenty1/all-colors/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
sha2 = "0.10"
stack-map = "1"


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark_colors"
harness = false
